--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "crypto-random-string": "^4.0.0",
     "formik": "^2.2.6",
     "js-base64": "^3.6.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
+    "query-string": "^7.0.0",
     "react": "^16.13.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
