--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^4.2.0",
     "react-loading-overlay": "^1.0.1",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
