--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
+    "crypto-js": "^4.0.0",
     "crypto-random-string": "^4.0.0",
     "formik": "^2.2.6",
     "js-base64": "^3.6.0",
+    "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "query-string": "^7.0.0",
@@ -28,7 +30,6 @@
     "react-select": "^3.1.0",
     "react-spinners": "^0.10.6",
     "reactstrap": "^8.4.1",
-    "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
