--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.6",
     "js-base64": "^3.6.0",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "query-string": "^7.0.0",
